Fixed nav bar look and footer spacing

--- a/client/src/components/Footer/index.css
+++ b/client/src/components/Footer/index.css
@@ -1,7 +1,7 @@
 .main-footer__upper {
   display: flex;
   justify-content: space-between;
-  padding: 8rem 0;
+  margin-top: 45rem;
 }
 
 @media only screen and (max-width: 56.25em) {
@@ -59,7 +59,6 @@
 
 .main-footer__lower {
   padding: 4rem 0;
-  border-top: 1px solid #444;
   color: #eee;
   font-size: 1.2rem;
   text-align: center; /* Use center for all screen sizes */
